# flock_physics

./: CMakeLists.txt  CMakePresets.json
src/: camera.cpp  camera.hpp  main.cpp  scene.cpp  scene.hpp
src/math/: matrices.cpp  matrices.hpp  vectors.cpp  vectors.hpp
src/math/geometry/: 2d_geometry.cpp  2d_geometry.hpp  3d_geometry.cpp  3d_geometry.hpp
src/physics/: cloth.cpp  cloth.hpp  distance_joint.cpp  distance_joint.hpp  particle.cpp  particle.hpp  physics_system.cpp  physics_system.hpp  rigidbody.hpp  rigidbody_volume.cpp  rigidbody_volume.hpp  spring.cpp  spring.hpp
src/structure/: quad_tree.cpp  quad_tree.hpp
